syntax="proto3"; //版本号

package frame;  //包名

// ID 定义
enum NetworkMessageID{
	Zero = 0;
	RequestTest = 1;
}

// 发包 收包 总结构体
message HeadMessage{
	int32 MessageID = 1;				// 协议ID
	bytes MessageContent = 2;			// 协议的具体内容
	string Title = 3;
}

// 测试 请求
message RequestTestReq{
	string content = 1;
}

// 测试 回包
message RequestTestRsp{
	string content = 1;
}